content/docs/0.11.x/reference/cli/commands/keptn_create_project.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn create project"
slug: keptn_create_project
---
## keptn create project

Creates a new project

### Synopsis

Creates a new project with the provided name and Shipyard. 
The shipyard file describes the used stages. These stages are defined by name, as well as their task sequences.

By executing the *create project* command, Keptn initializes an internal Git repository that is used to maintain all project-related resources. 
To upstream this internal Git repository to a remote repository, the Git user (*--git-user*), an access token (*--git-token*), and the remote URL (*--git-remote-url*) are required.

For more information about Shipyard, creating projects, or upstream repositories, please go to [Manage Keptn](https://v1.keptn.sh/docs/0.11.x/manage/)


```
keptn create project PROJECTNAME --shipyard=FILEPATH [flags]
```

### Examples

```
keptn create project PROJECTNAME --shipyard=FILEPATH
keptn create project PROJECTNAME --shipyard=FILEPATH --git-user=GIT_USER --git-token=GIT_TOKEN --git-remote-url=GIT_REMOTE_URL
```

### Options

```
  -r, --git-remote-url string   The remote url of the upstream target
  -t, --git-token string        The git token of the git user
  -u, --git-user string         The git user of the upstream target
  -s, --shipyard string         The path or URL to the shipyard file specifying the environment
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn create](../keptn_create/)	 - Creates a new project or service

###### Auto generated by spf13/cobra on 25-Nov-2021
